Added a start button to begin the game

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 <body>
   <h1>Let the Quest Begin</h1>
   <script src="adventure.js"></script>
+  
+  To begin the game, press the button below:<br /><br />
+  <input type="button" value="Begin Game" onclick="beginGame();">
+
 </body>
 </html>
