--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
 
 <body>
   <h1>Let the Quest Begin</h1>
-  <script src="adventure.js"></script>
   
   To begin the game, press the button below:<br /><br />
   <input type="button" value="Begin Game" onclick="beginGame();">
+  <br /><br />
 
+  Press the Reset Game button after the treasure has been found to start a new game.<br /><br />
+  <input type="button" value="Reset Game" onclick="location.reload();">
+  
+  <script src="adventure.js"></script>
 </body>
 </html>
